# umwelt

./: .dockerignore  .gitignore  CHANGELOG.md  CLAIMS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.venv_check/: pyvenv.cfg
docs/: CONSUMER_PIN.md  DECAY_NOTES.md  FIELD_NOTES.md  FIELD_NOTES_SEPTACRYPT.md  FLEDGELING_CORE.md  FLEDGELING_SEPTACRYPT_PLAN.md  FORGE.md  HIVE_PROTOCOL.md  KNOT_ATTACHMENT_ADR.md  NEW_DOMAIN.md  SERVICE.md  SNAPSHOT_STAMP_ANCHOR.md  SPEC.md  THEORY.md  TIME.md  forecasting.md  papers.md
proofs/: _gridworld.py  blank_slate.py  deconfound_smoke.py  fidelity_harness.py  fledgeling_fog_blank.py  gamma_walk.py  ladder_walk.py
tests/: test_agency_loop.py  test_atomic_multimind_turn.py  test_belief_gauge.py  test_binding_validation.py  test_bpu_dispatch.py  test_bpu_forecast.py  test_bpu_forecast_probe.py  test_breath_scorer.py  test_confounding.py  test_daemon_parity.py  test_dream_loop.py  test_dream_topology.py  test_egress_tendrils.py  test_engine_blank_boot.py  test_events.py  test_facet_kits.py  test_forecast_freerun.py  test_forge_pipeline.py  test_forge_policy.py  test_forge_spec_path.py  test_front_door.py  test_gauge_place_provenance.py  test_graph_state.py  test_hive_relay_example.py  test_host_api.py  test_leaf_forecast.py  test_learning_router.py  test_manifold_game_example.py  test_multimind_privacy.py  test_observation_trust.py  test_packet.py  test_playground_docs.py  test_spec_to_field.py  test_spec_validate.py  test_supervisor_hardening.py  test_supervisor_smoke.py  test_transparency.py  test_trust_web.py  (+5 more)
(+178 files in other folders)
