[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "umwelt-engine"
version = "0.1.0.dev0"
description = "A belief-field engine: describe a world as data, feed it observations, read live honest comprehension and forecasts."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Luke Spooner" }]
keywords = ["belief", "estimation", "forecasting", "bayesian-filtering", "world-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]
viz = []

[project.scripts]
umweltd = "umweltd.supervisor:main"
umweltd-worker = "umweltd.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "proofs"]
# proofs/ files are named for what they prove, not test_*-prefixed — list them explicitly
python_files = [
    "test_*.py",
    "blank_slate.py",
    "fidelity_harness.py",
    "ladder_walk.py",
    "deconfound_smoke.py",
]
markers = [
    "slow: long-running evidence harness (still runs in the default gate)",
]
